	* Added slerpShortestArc() and euclideanInnerProduct() functions
	  to Imath::Quat<T>.
	  (Nick Porcino)
	* Added 4D vector class template Imath::Vec4<T>.
	  (Nick Porcino)
	* Copy constructors and assignment operators for Matrix33<T>
	  and Matrix44<T> are up to 25% faster.  Added matrix constructors
	  that do not initialize the matrix (this is faster in cases where
	  the initial value of the matrix is immediately overwritten anyway).
	  (Nick Porcino)
	* Rewrote function closestPointOnBox(point,box).  Shortened
	  the code, improved numerical accuracy, fixed a bug where
	  closestPointOnBox(box.center(),box) would return the center
	  of the +Z side of the box, even if the +/-X or +/-Y sides
	  were closer.
	  (Florian Kainz)
	* Rewrote function findEntryAndExitPoints() in ImathBoxAlgo.h.
	  Results are now consistent with those from intersect(), also
	  in ImathBoxAlgo.h.
	  (Florian Kainz)
	* Made Vec2<T>::length() and Vec3<T>::length() more accurate for
	  vectors whose length is less than sqrt(limits<T>::smallest());
	  (Florian Kainz)
	* Made Quat<T>::angle() more accurate for small angles.
	  (Don Hatch) 

Version 1.0.1:
	* Removed Windows .suo files from distribution.
	  (Eric Wimmer)

Version 1.0.0:
	* Bumped DSO version number to 6.0
	  (Florian Kainz)
	* Rounding during float-to-half conversion now implements
	  "round to nearest even" mode: if the original float value
	  is exactly in the middle between the two closest half values
	  then rounding chooses the half value whose least significant
	  bit is zero.
	  (Florian Kainz)
	* Installation Tuning:
	  - Corrected version number on dso's (libtool) - now 5.0
	  - Separated ILMBASE_LDFLAGS and ILMBASE_LIBS so that test programs
	    in configure scripts of packages dependent on IlmBase can link
	    with static libraries properly
	  - eliminated some warning messages during install
	  (Andrew Kunz)
	
Version 0.9.0:
	* Initial release of this code as a separate library.